Overflow fix

--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -2,7 +2,8 @@
 *		Padrões			*
 ************************/
 body{
-	overflow:hidden;
+	overflow-y:scroll;
+	overflow-x:hidden;
 }
 li{
 	list-style-type: none;
